--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
+
     compile 'com.android.support:design:25.0.1'
 
     compile 'com.google.dagger:dagger:2.0.2'
