--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".users.UsersActivity"
+        <activity android:name=".todos.TodosActivity"
                   android:label="@string/app_name"
                   android:theme="@style/AppTheme.NoActionBar">
         </activity>
