--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'org.apache.commons:commons-lang3:3.1'
+
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+
 }
